<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="*"
    android:shrinkColumns="*">
    <TableRow>
        <Button
            android:text="@string/button_1"
            android:layout_column="0"/>
        <Button
            android:text="@string/button_2"
            android:layout_column="1"/>
        <Button
            android:text="@string/button_3"
            android:layout_column="2"/>
        <Button
            android:text="@string/button_4"
            android:layout_column="3"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/button_5"
            android:layout_column="0"
            android:layout_span="4"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/button_6"
            android:layout_gravity="center"
            android:layout_span="4"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/button_7"
            android:layout_column="0"/>
        <Button
            android:text="@string/button_8"
            android:layout_column="3"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/button_9"
            android:layout_span="4"
            android:layout_column="0"/>
    </TableRow>
    <TableRow>
        <Button
            android:text="@string/button_10"
             android:layout_gravity="center"
            android:layout_span="4"/>
    </TableRow>
</TableLayout>