<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_components"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_email"
        android:background="#AFE8EF"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/edtEmail"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="10dp"
        android:id="@+id/btnSubmit"/>

    <CheckBox
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/i_agree_with_you"
        android:id="@+id/cbAgree"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/btnOk"/>
    <RadioButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/male"
        android:id="@+id/radMale"/>
    <RadioButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/female"
        android:id="@+id/radFemale"/>
    <RadioButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/lgbt"
        android:id="@+id/radLGBT"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/apple"
            android:id="@+id/radApple"/>
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/samsung"
            android:id="@+id/radSamsung"/>
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/bphone"
            android:id="@+id/radBphone"/>
    </RadioGroup>
</LinearLayout>