<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:padding="5dp"
    android:gravity="center">
    <TableRow>
        <TextView
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/login_system"
            android:layout_column="0"
            android:layout_span="3"
            android:layout_gravity="center"/>
    </TableRow>
    <TableRow>
        <EditText
            android:layout_span="3"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:layout_height="50dp"/>
    </TableRow>
    <TableRow>
        <EditText
            android:layout_span="3"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_height="50dp"/>
    </TableRow>
    <TableRow android:layout_marginTop="20dp">
        <Button
            android:text="@string/submit"/>
        <Button
            android:text="@string/forget_password"/>
        <Button
            android:text="@string/cancel"/>
    </TableRow>
</TableLayout>