<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:title="@string/home"
            android:icon="@drawable/home_24dp_icon"/>
        <item
            android:id="@+id/budget_menu"
            android:title="@string/budget"
            android:icon="@drawable/budget"/>
        <item
            android:id="@+id/setting_menu"
            android:title="@string/settings"
            android:icon="@drawable/settings_24dp_icon"/>
    </group>
    <item
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout_24dp"/>
        </menu>
    </item>
</menu>
