<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:padding="10dp">
    <TableRow
        android:background="#0B0A0A"
        android:padding="8dp">
        <TextView
            android:text="@string/id"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_column="0"/>
        <TextView
            android:text="@string/full_name"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_column="1"/>
        <TextView
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_column="2"/>
        <TextView
            android:text="@string/phone"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_column="3"/>
    </TableRow>
    <TableRow android:paddingTop="8dp">
        <TextView
            android:text="@string/vti001"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/thanh_trieu"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/trieunt6_gmail_com"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/_0975091304"
            android:textSize="18sp"/>
    </TableRow>
    <TableRow android:paddingTop="8dp">
        <TextView
            android:text="@string/vti001"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/thanh_trieu"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/trieunt6_gmail_com"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/_0975091304"
            android:textSize="18sp"/>
    </TableRow>
    <TableRow android:paddingTop="8dp">
        <TextView
            android:text="@string/vti001"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/thanh_trieu"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/trieunt6_gmail_com"
            android:textSize="18sp"/>
        <TextView
            android:text="@string/_0975091304"
            android:textSize="18sp"/>
    </TableRow>
</TableLayout>