<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#EBF0F1">
    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="#C86262"
        android:text="@string/textview_1"
        android:textColor="#ffffff"
        android:gravity="center"
        android:id="@+id/textView1"/>
    <TextView
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:background="#50BBEC"
        android:text="@string/textview_2"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_toEndOf="@id/textView1"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#B0A11A"
        android:text="@string/textview_3"
        android:gravity="center"
        android:id="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"/>
</RelativeLayout>